Wed May 12 12:44:40 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/Config_Handlers/Domain_Handler.cpp:
        * DnC/Config_Handlers/Domain_Handler.h:

          Made changes to handle HREF tags within
          another referenced document.

Wed May 12 00:06:26 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/Config_Handlers/Domain_Handler.cpp:
        * DnC/Config_Handlers/Domain_Handler.h:

          Made changes to handle HREF tags.

Tue May 11 22:58:35 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CIDLC/ServantHeaderGenerator.cpp:
        * CIDLC/ServantSourceGenerator.cpp:

          Changes to support multiplex uses ports in components.
          Thanks to Bala Natarajan <bala@dre.vanderbilt.edu> for
          writing the hand-crafted version of the servant glue
          code.

Tue May 11 22:55:22 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * examples/OEP/BasicSP/BasicSP.mpc:

          Fixed IDL compiler command line options so the stub and
          skeleton export macros will get generated correctly regardless
          of the order of execution of the stub and skeleton project
          generation.

Tue May 11 16:12:07 2004  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * DnC/Config_Handlers/DT_Handler.h:
        * DnC/Config_Handlers/DT_Handler.cpp:

          Added CORBA::TypeCode::duplicate for basic type codes as the
          individual handlers and IDL structures will be releasing the
          typecodes generated.

        * DnC/Config_Handlers/Any_Handler.h:
        * DnC/Config_Handlers/Any_Handlers.cpp:

          Insted of requiring that each top level handler pass an ORB
          reference to the Any handler, now the Any handler calls ORB init
          There is not additional overhead other than the call as the same
          ORB reference is returned each time from the ORB table

        * DnC/Config_Handlers/Config_Handlers.mpc:
