@@ -42,139 +42,10 @@ namespace CIAO
     {
       ACE_DEBUG ((LM_DEBUG, "UUID: %s \n", domain.UUID.in ()));
       ACE_DEBUG ((LM_DEBUG, "label: %s \n", domain.label.in ()));
-      for (CORBA::ULong i = 0; i < domain.node.length (); ++i)
-        {
-          ACE_DEBUG ((LM_DEBUG, "\nNode %d: \n", i + 1));
-          ACE_DEBUG ((LM_DEBUG, "     Name: %s \n", 
-                      domain.node[i].name.in ()));
-          for (CORBA::ULong j = 0; j < domain.node[i].resource.length (); ++j)
-            {
-              ACE_DEBUG ((LM_DEBUG, "     Resource %d: \n", j + 1));
-              ACE_DEBUG ((LM_DEBUG, "         Name: %s \n", 
-                          domain.node[i].resource[j].name.in ()));
-              for (CORBA::ULong k = 0; 
-                   k < domain.node[i].resource[j].resourceType.length (); ++k)
-                {
-                  ACE_DEBUG ((LM_DEBUG, "         ResourceType: %s \n", 
-                     domain.node[i].resource[j].resourceType[k].in ()));
-                }
-            }
-
-          for (CORBA::ULong j = 0; 
-               j < domain.node[i].connectionRef.length (); ++j)
-            {
-              ACE_DEBUG ((LM_DEBUG, "     Connection %d: \n", j + 1));
-              int value = domain.node[i].connectionRef[j];
-              ACE_DEBUG ((LM_DEBUG, "         Name: %s \n", 
-                          domain.interconnect[value].name.in ()));
-            }
-
-          for (CORBA::ULong j = 0; 
-               j < domain.node[i].sharedResourceRef.length (); ++j)
-            {
-              ACE_DEBUG ((LM_DEBUG, "     SharedResource %d: \n", j + 1));
-              int value = domain.node[i].sharedResourceRef[j];
-              ACE_DEBUG ((LM_DEBUG, "         Name: %s \n", 
-                          domain.sharedResource[value].name.in ()));
-            }
-
-        }
-
-      for (CORBA::ULong i = 0; i < domain.bridge.length (); ++i)
-        {
-          ACE_DEBUG ((LM_DEBUG, "\nBridge %d: \n", i + 1));
-          ACE_DEBUG ((LM_DEBUG, "     Name: %s \n", 
-                      domain.bridge[i].name.in ()));
-          ACE_DEBUG ((LM_DEBUG, "     Label: %s \n", 
-                      domain.bridge[i].label.in ()));
-          for (CORBA::ULong j = 0; 
-               j < domain.bridge[i].resource.length (); ++j)
-            {
-              ACE_DEBUG ((LM_DEBUG, "     Resource %d: \n", j + 1));
-              ACE_DEBUG ((LM_DEBUG, "         Name: %s \n", 
-                          domain.bridge[i].resource[j].name.in ()));
-              for (CORBA::ULong k = 0; 
-                   k < domain.bridge[i].resource[j].resourceType.length (); 
-                   ++k)
-                {
-                  ACE_DEBUG ((LM_DEBUG, "         ResourceType: %s \n", 
-                    domain.bridge[i].resource[j].resourceType[k].in ()));
-                }
-            }
-
-          for (CORBA::ULong j = 0; j < domain.bridge[i].connectRef.length (); 
-               ++j)
-            {
-              ACE_DEBUG ((LM_DEBUG, "     Connection %d: \n", j + 1));
-              int value = domain.bridge[i].connectRef[j];
-              ACE_DEBUG ((LM_DEBUG, "         Name: %s \n", 
-                          domain.interconnect[value].name.in ()));
-            }
-        }
-
-      for (CORBA::ULong i = 0; i < domain.interconnect.length (); ++i)
-        {
-          ACE_DEBUG ((LM_DEBUG, "\nInterconnect %d: \n", i + 1));
-          ACE_DEBUG ((LM_DEBUG, "     Name: %s \n", 
-                      domain.interconnect[i].name.in ()));
-          ACE_DEBUG ((LM_DEBUG, "     Label: %s \n", 
-                      domain.interconnect[i].label.in ()));
-          for (CORBA::ULong j = 0; 
-               j < domain.interconnect[i].resource.length (); ++j)
-            {
-              ACE_DEBUG ((LM_DEBUG, "     Resource %d: \n", j + 1));
-              ACE_DEBUG ((LM_DEBUG, "         Name: %s \n", 
-                          domain.interconnect[i].resource[j].name.in ()));
-              for (CORBA::ULong k = 0; 
-                k < domain.interconnect[i].resource[j].resourceType.length (); 
-                ++k)
-                {
-                  ACE_DEBUG ((LM_DEBUG, "         ResourceType: %s \n", 
-                   domain.interconnect[i].resource[j].resourceType[k].in ()));
-                }
-            }
-
-          for (CORBA::ULong j = 0; 
-               j < domain.interconnect[i].connectionRef.length (); ++j)
-            {
-              ACE_DEBUG ((LM_DEBUG, "     Connection %d: \n", j + 1));
-              int value = domain.interconnect[i].connectionRef[j];
-              ACE_DEBUG ((LM_DEBUG, "         Name: %s \n", 
-                          domain.bridge[value].name.in ()));
-            }
-
-          for (CORBA::ULong j = 0; 
-               j < domain.interconnect[i].connectRef.length (); ++j)
-            {
-              ACE_DEBUG ((LM_DEBUG, "     SharedResource %d: \n", j + 1));
-              int value = domain.interconnect[i].connectRef[j];
-              ACE_DEBUG ((LM_DEBUG, "         Name: %s \n", 
-                          domain.node[value].name.in ()));
-            }
-
-        }
-
-      for (CORBA::ULong i = 0; i < domain.sharedResource.length (); ++i)
-        {
-          ACE_DEBUG ((LM_DEBUG, "\nSharedResource %d: \n", i + 1));
-          ACE_DEBUG ((LM_DEBUG, "     Name: %s \n", 
-                      domain.sharedResource[i].name.in ()));
-          for (CORBA::ULong k = 0; 
-               k < domain.sharedResource[i].resourceType.length (); ++k)
-            {
-              ACE_DEBUG ((LM_DEBUG, "         ResourceType: %s \n", 
-                domain.sharedResource[i].resourceType[k].in ()));
-            }
-
-          for (CORBA::ULong j = 0; 
-               j < domain.sharedResource[i].nodeRef.length (); ++j)
-            {
-              ACE_DEBUG ((LM_DEBUG, "     Connection %d: \n", j + 1));
-              int value = domain.sharedResource[i].nodeRef[j];
-              ACE_DEBUG ((LM_DEBUG, "         Name: %s \n", 
-                          domain.node[value].name.in ()));
-            }
-        }
+      this->dump_nodes (domain);
+      this->dump_ics (domain);
+      this->dump_bridges (domain);
+      this->dump_srs (domain);
 /*
       REF_ITER end = id_map_.end ();
 
@@ -2307,6 +2178,152 @@ namespace CIAO
       */
 
       return;
+    }
+
+    void Domain_Handler::dump_nodes (Deployment::Domain& domain)
+    {
+      for (CORBA::ULong i = 0; i < domain.node.length (); ++i)
+        {
+          ACE_DEBUG ((LM_DEBUG, "\nNode %d: \n", i + 1));
+          ACE_DEBUG ((LM_DEBUG, "     Name: %s \n",
+                      domain.node[i].name.in ()));
+          for (CORBA::ULong j = 0; j < domain.node[i].resource.length (); ++j)
+            {
+              ACE_DEBUG ((LM_DEBUG, "     Resource %d: \n", j + 1));
+              ACE_DEBUG ((LM_DEBUG, "         Name: %s \n",
+                          domain.node[i].resource[j].name.in ()));
+              for (CORBA::ULong k = 0;
+                   k < domain.node[i].resource[j].resourceType.length (); ++k)
+                {
+                  ACE_DEBUG ((LM_DEBUG, "         ResourceType: %s \n",
+                     domain.node[i].resource[j].resourceType[k].in ()));
+                }
+            }
+
+          for (CORBA::ULong j = 0;
+               j < domain.node[i].connectionRef.length (); ++j)
+            {
+              ACE_DEBUG ((LM_DEBUG, "     Connection %d: \n", j + 1));
+              int value = domain.node[i].connectionRef[j];
+              ACE_DEBUG ((LM_DEBUG, "         Name: %s \n",
+                          domain.interconnect[value].name.in ()));
+            }
+
+          for (CORBA::ULong j = 0;
+               j < domain.node[i].sharedResourceRef.length (); ++j)
+            {
+              ACE_DEBUG ((LM_DEBUG, "     SharedResource %d: \n", j + 1));
+              int value = domain.node[i].sharedResourceRef[j];
+              ACE_DEBUG ((LM_DEBUG, "         Name: %s \n",
+                          domain.sharedResource[value].name.in ()));
+            }
+
+        }
+    }
+
+    void Domain_Handler::dump_ics (Deployment::Domain& domain)
+    {
+      for (CORBA::ULong i = 0; i < domain.interconnect.length (); ++i)
+        {
+          ACE_DEBUG ((LM_DEBUG, "\nInterconnect %d: \n", i + 1));
+          ACE_DEBUG ((LM_DEBUG, "     Name: %s \n",
+                      domain.interconnect[i].name.in ()));
+          ACE_DEBUG ((LM_DEBUG, "     Label: %s \n",
+                      domain.interconnect[i].label.in ()));
+          for (CORBA::ULong j = 0;
+               j < domain.interconnect[i].resource.length (); ++j)
+            {
+              ACE_DEBUG ((LM_DEBUG, "     Resource %d: \n", j + 1));
+              ACE_DEBUG ((LM_DEBUG, "         Name: %s \n",
+                          domain.interconnect[i].resource[j].name.in ()));
+              for (CORBA::ULong k = 0;
+                k < domain.interconnect[i].resource[j].resourceType.length ();
+                ++k)
+                {
+                  ACE_DEBUG ((LM_DEBUG, "         ResourceType: %s \n",
+                   domain.interconnect[i].resource[j].resourceType[k].in ()));
+                }
+            }
+
+          for (CORBA::ULong j = 0;
+               j < domain.interconnect[i].connectionRef.length (); ++j)
+            {
+              ACE_DEBUG ((LM_DEBUG, "     Connection %d: \n", j + 1));
+              int value = domain.interconnect[i].connectionRef[j];
+              ACE_DEBUG ((LM_DEBUG, "         Name: %s \n",
+                          domain.bridge[value].name.in ()));
+            }
+
+          for (CORBA::ULong j = 0;
+               j < domain.interconnect[i].connectRef.length (); ++j)
+            {
+              ACE_DEBUG ((LM_DEBUG, "     SharedResource %d: \n", j + 1));
+              int value = domain.interconnect[i].connectRef[j];
+              ACE_DEBUG ((LM_DEBUG, "         Name: %s \n",
+                          domain.node[value].name.in ()));
+            }
+
+        }
+    }
+
+    void Domain_Handler::dump_bridges (Deployment::Domain& domain)
+    {
+      for (CORBA::ULong i = 0; i < domain.bridge.length (); ++i)
+        {
+          ACE_DEBUG ((LM_DEBUG, "\nBridge %d: \n", i + 1));
+          ACE_DEBUG ((LM_DEBUG, "     Name: %s \n",
+                      domain.bridge[i].name.in ()));
+          ACE_DEBUG ((LM_DEBUG, "     Label: %s \n",
+                      domain.bridge[i].label.in ()));
+          for (CORBA::ULong j = 0;
+               j < domain.bridge[i].resource.length (); ++j)
+            {
+              ACE_DEBUG ((LM_DEBUG, "     Resource %d: \n", j + 1));
+              ACE_DEBUG ((LM_DEBUG, "         Name: %s \n",
+                          domain.bridge[i].resource[j].name.in ()));
+              for (CORBA::ULong k = 0;
+                   k < domain.bridge[i].resource[j].resourceType.length ();
+                   ++k)
+                {
+                  ACE_DEBUG ((LM_DEBUG, "         ResourceType: %s \n",
+                    domain.bridge[i].resource[j].resourceType[k].in ()));
+                }
+            }
+
+          for (CORBA::ULong j = 0; j < domain.bridge[i].connectRef.length ();
+               ++j)
+            {
+              ACE_DEBUG ((LM_DEBUG, "     Connection %d: \n", j + 1));
+              int value = domain.bridge[i].connectRef[j];
+              ACE_DEBUG ((LM_DEBUG, "         Name: %s \n",
+                          domain.interconnect[value].name.in ()));
+            }
+        }
+    }
+
+    void Domain_Handler::dump_srs (Deployment::Domain& domain)
+    {
+      for (CORBA::ULong i = 0; i < domain.sharedResource.length (); ++i)
+        {
+          ACE_DEBUG ((LM_DEBUG, "\nSharedResource %d: \n", i + 1));
+          ACE_DEBUG ((LM_DEBUG, "     Name: %s \n",
+                      domain.sharedResource[i].name.in ()));
+          for (CORBA::ULong k = 0;
+               k < domain.sharedResource[i].resourceType.length (); ++k)
+            {
+              ACE_DEBUG ((LM_DEBUG, "         ResourceType: %s \n",
+                domain.sharedResource[i].resourceType[k].in ()));
+            }
+
+          for (CORBA::ULong j = 0;
+               j < domain.sharedResource[i].nodeRef.length (); ++j)
+            {
+              ACE_DEBUG ((LM_DEBUG, "     Connection %d: \n", j + 1));
+              int value = domain.sharedResource[i].nodeRef[j];
+              ACE_DEBUG ((LM_DEBUG, "         Name: %s \n",
+                          domain.node[value].name.in ()));
+            }
+        }
     }
 
   }
